# l3objectstorage

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  S3_ACTIONS.md  docker-compose.yml
docker/: Dockerfile  Dockerfile.alpine  dnsmasq-awsstyle.conf  dnsmasq-vhost.conf  docker-compose.test.awsstyle.yml  docker-compose.test.vhost.yml  docker-compose.test.yml  elasticmq.conf  entrypoint.sh  sns-config.json
scripts/: run-integration-tests.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/bucket/: acl.rs  cors.rs  create.rs  delete.rs  encryption.rs  head.rs  lifecycle.rs  list.rs  logging.rs  mod.rs  notification.rs  object_lock.rs  ownership_controls.rs  policy.rs  public_access_block.rs  replication.rs  request_payment.rs  tagging.rs  (+2 more)
src/auth/: credentials.rs  mod.rs  presigned.rs  sigv4.rs
src/config/: mod.rs  settings.rs
src/crypto/: mod.rs
src/notifications/: dispatcher.rs  event.rs  matcher.rs  mod.rs  sender.rs
src/server/: http.rs  mod.rs  router.rs
src/storage/: bucket.rs  engine.rs  metadata.rs  mod.rs  multipart.rs  object.rs
src/types/: bucket.rs  error.rs  mod.rs  object.rs  response.rs
src/utils/: etag.rs  mod.rs  time.rs  xml.rs
tests/: aws_sdk_tests.rs_bak  bucket_tests.rs  graceful_shutdown_tests.rs  mock_tests.rs  object_lock_tests.rs_bak  object_tests.rs
tests/aws_sdk_tests/: acl.rs  attributes.rs  auth.rs  bucket.rs  concurrency.rs  conditional.rs  cors_policy.rs  delete.rs  encryption.rs  errors.rs  lifecycle.rs  list.rs  logging.rs  main.rs  multipart.rs  notification.rs  notification_trigger.rs  object.rs  object_lock.rs  ownership_controls.rs  performance.rs  policy.rs  presigned.rs  protocol.rs  public_access_block.rs  range.rs  rename.rs  replication.rs  request_payment.rs  select.rs  stress.rs  tagging.rs  versioning.rs  virtual_host.rs  virtual_host_aws.rs  website.rs  workflow.rs
tests/common/: mod.rs
(+24 files in other folders)
